<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Change Password Heading -->
    <TextView
        android:id="@+id/textViewChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <!-- Old Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textSize="16sp"
        android:layout_marginTop="16sp"/>

    <EditText
        android:id="@+id/et_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:minHeight="48dp"
        android:padding="4dp"
        android:drawablePadding="8dp"/>

    <!-- New Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:minHeight="48dp"
        android:padding="4dp"
        android:drawablePadding="8dp"/>

    <!-- Confirm Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_border"
        android:minHeight="48dp"
        android:padding="4dp"
        android:drawablePadding="8dp"/>

    <!-- Show/Hide Password Toggle -->
    <CheckBox
        android:id="@+id/checkBoxShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_marginTop="16dp"/>

    <!-- Change Password Button -->
    <Button
        android:id="@+id/btn_changePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"/>

</LinearLayout>
